--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Jean Piere Dudey <jeandudey@hotmail.com>"]
 repository = "https://github.com/jeandudey/uri-rs.git"
 homepage = "https://github.com/jeandudey/uri-rs.git"
-license = "Apache License 2.0"
+license = "	Apache-2.0"
 readme = "README.md"
 documentation = "http://killercup.github.io/hsl-rs/"
 description = "uri is a library to help in the creation and parsing of an uri."
