Use lazy_static to create regexes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ description = "uri is a library to help in the creation and parsing of an uri."
 [dependencies]
 regex = "0.1"
 clippy = {version = "0.0.37", optional = true}
+lazy_static = "0.2"
 
 [features]
 default = []
